option go_package = "foo";
